--- a/cacti/branches/0.8.8/include/themes/modern/main.css
+++ b/cacti/branches/0.8.8/include/themes/modern/main.css
@@ -42,7 +42,7 @@ a:hover {
 
 .saveRow {
 	background-color:#EAEAEA;
-	padding:10px;
+	padding:4px;
 }
 
 .linkMarker {
@@ -326,7 +326,14 @@ ul#breadcrumbs {
 }
 
 .templateHeader {
-	background-color: #888888;
+	background: rgba(76,76,76,1);
+	background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(76,76,76,1)), color-stop(12%, rgba(89,89,89,1)), color-stop(25%, rgba(102,102,102,1)), color-stop(39%, rgba(71,71,71,1)), color-stop(50%, rgba(44,44,44,1)), color-stop(51%, rgba(0,0,0,1)), color-stop(60%, rgba(17,17,17,1)), color-stop(76%, rgba(43,43,43,1)), color-stop(91%, rgba(28,28,28,1)), color-stop(100%, rgba(19,19,19,1)));
+	background: -webkit-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+	background: -o-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+	background: -ms-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+	background: linear-gradient(to bottom, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
 }
 
 .textSubHeaderDark, .textSubHeaderDark:visited {
@@ -340,26 +347,41 @@ ul#breadcrumbs {
 }
 
 .cactiTableTitle {
-	background: rgba(75,106,232,1);
-	background: -moz-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(75,106,232,1)), color-stop(100%, rgba(22,22,196,1)));
-	background: -webkit-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: -o-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: -ms-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: linear-gradient(to bottom, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b6ae8', endColorstr='#1616c4', GradientType=0 );
+	background: rgba(98,125,77,1);
+	background: -moz-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(98,125,77,1)), color-stop(100%, rgba(31,59,8,1)));
+	background: -webkit-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: -o-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: -ms-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: linear-gradient(to bottom, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#627d4d', endColorstr='#1f3b08', GradientType=0 );
+	#background: rgba(75,106,232,1);
+	#background: -moz-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(75,106,232,1)), color-stop(100%, rgba(22,22,196,1)));
+	#background: -webkit-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: -o-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: -ms-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: linear-gradient(to bottom, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b6ae8', endColorstr='#1616c4', GradientType=0 );
 }
 
 .cactiNavBarTop {
-	/*	background-color: #00438c; */
-	background: rgba(75,106,232,1);
-	background: -moz-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(75,106,232,1)), color-stop(100%, rgba(22,22,196,1)));
-	background: -webkit-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: -o-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: -ms-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	background: linear-gradient(to bottom, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b6ae8', endColorstr='#1616c4', GradientType=0 );
+	background: rgba(98,125,77,1);
+	background: -moz-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(98,125,77,1)), color-stop(100%, rgba(31,59,8,1)));
+	background: -webkit-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: -o-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: -ms-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	background: linear-gradient(to bottom, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#627d4d', endColorstr='#1f3b08', GradientType=0 );
+	#background: rgba(75,106,232,1);
+	#background: -moz-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(75,106,232,1)), color-stop(100%, rgba(22,22,196,1)));
+	#background: -webkit-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: -o-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: -ms-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#background: linear-gradient(to bottom, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
+	#filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b6ae8', endColorstr='#1616c4', GradientType=0 );
 }
 
 .cactiNavBarBottom {
