- merge DSSTATS, Boost and Settings to the mainstream - Enhancement of breadcrumbs to include Tree information in Ajax response. - Removing all double quotes from 'include' files for performance. - Some cleanups in cdef.php - Enhancement of 'Send Test Email' to use Dialog jQuery plugin - Fixed (finally) the last remaining issues with re-sizable columns - Some CSS cleanup - Fix main tabs not highlighting - Add consistent help screens to CLI and pollers relative to versions and copyright years (now a constant)

--- a/cacti/branches/0.8.8/include/themes/modern/main.css
+++ b/cacti/branches/0.8.8/include/themes/modern/main.css
@@ -28,6 +28,11 @@ a:hover {
 	color: #333333;
 }
 
+.emailtest {
+	cursor:pointer;
+	display:block;
+}
+
 .odd {
 	background-color:#F5F5F5;
 }
@@ -200,7 +205,7 @@ ul#breadcrumbs {
   margin-top: -1.5em;   
   border-top: 1.5em solid transparent;
   border-bottom: 1.5em solid transparent;
-  border-left: 1em solid;
+  border-left: 1.1em solid;
   right: -1em;
 }
 
@@ -546,7 +551,7 @@ ul#breadcrumbs {
 }
 
 .deleteMarker {
-	padding-bottom: 8px; 
+	padding-bottom: 9px !important; 
 }
 
 td.tab {
