--- a/cacti/branches/0.8.8/include/themes/modern/main.css
+++ b/cacti/branches/0.8.8/include/themes/modern/main.css
@@ -16,7 +16,6 @@ body {
 
 a, a:active, a:visited {
 	color: #006400;
-/*	color: #1CB030; */
 	text-decoration: none;
 	font-size: 18;
 	padding: 7;
@@ -26,6 +25,13 @@ a, a:active, a:visited {
 a:hover {
 	text-decoration: none;
 	color: #333333;
+}
+
+th .ui-icon {
+    margin-top: -8px;
+    position: absolute;
+    right: 3px;
+    top: 50%;
 }
 
 .emailtest {
@@ -48,6 +54,11 @@ a:hover {
 .saveRow {
 	background-color:#EAEAEA;
 	padding:4px;
+}
+
+.treeArea, .treeItemsArea {
+	width:33%;
+	border:1px solid #006400;
 }
 
 .linkMarker {
@@ -383,14 +394,6 @@ ul#breadcrumbs {
 	background: -ms-linear-gradient(top, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
 	background: linear-gradient(to bottom, rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#627d4d', endColorstr='#1f3b08', GradientType=0 );
-	#background: rgba(75,106,232,1);
-	#background: -moz-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	#background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(75,106,232,1)), color-stop(100%, rgba(22,22,196,1)));
-	#background: -webkit-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	#background: -o-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	#background: -ms-linear-gradient(top, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	#background: linear-gradient(to bottom, rgba(75,106,232,1) 0%, rgba(22,22,196,1) 100%);
-	#filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b6ae8', endColorstr='#1616c4', GradientType=0 );
 }
 
 .cactiNavBarBottom {
@@ -406,14 +409,19 @@ ul#breadcrumbs {
 	background: -ms-linear-gradient(top, rgba(138,179,105,1) 0%, rgba(63,117,15,1) 100%);
 	background: linear-gradient(to bottom, rgba(138,179,105,1) 0%, rgba(63,117,15,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8ab369', endColorstr='#3f750f', GradientType=0 );
-/*	background-color: #6d88ad; */
 }
 
 .tableHeader th {
 	color: snow;
 	font-weight:bold;
+	cursor:pointer;
 	vertical-align:bottom;
 	text-align:left;
+}
+
+.tableHeader th div {
+	display:block;
+	padding-right:8px;
 }
 
 .tableSubHeaderColumn {
