1) Correct issue in _db_replace not handling primary keys correctly 2) Fix undefined variable in lib/tree.php 3) Properly copy and add users and their permissions 4) Move about/login/logout/permission images into CSS for themes 5) Remember my last settings tabs between refreshes 6) Only show Boost specifics when checked 7) Remove DOS eol's in database.php

--- a/cacti/branches/0.8.8/include/themes/modern/main.css
+++ b/cacti/branches/0.8.8/include/themes/modern/main.css
@@ -271,6 +271,33 @@ ul#breadcrumbs {
 
 .cactiLogo {
 	padding-top:20px;
+	background: #efefef url('./../../../images/cacti_logo.gif') no-repeat center;
+	display:block;
+	width:90px;
+	cursor:pointer;
+	height:140px;
+}
+
+.cactiLogon {
+	background: snow url('./../../../images/auth_login.gif') no-repeat center bottom;
+	width:400px;
+	height:200px;
+}
+
+.cactiLogout {
+	background: snow url('./../../../images/auth_logout.gif') no-repeat center bottom;
+	width:400px;
+	height:200px;
+}
+
+.cactiPermissions {
+	background: snow url('./../../../images/auth_deny.gif') no-repeat center bottom;
+	width:400px;
+	height:200px;
+}
+
+.logonPanel td {
+	padding:4px 0px;
 }
 
 .cactiConsoleNavigationArea table {
