--- a/cacti/branches/0.8.8/include/themes/classic/main.css
+++ b/cacti/branches/0.8.8/include/themes/classic/main.css
@@ -800,3 +800,35 @@ div.calendar { position: relative; }
 @media print {
 	.noprint { display:none }
 }
+
+.cactiLogo {
+         padding-top:20px;
+        background: #efefef url('./../../../images/cacti_logo.gif') no-repeat center;
+        display:block;
+        width:90px;
+        cursor:pointer;
+        height:140px;
+}
+
+.cactiLogon {
+        background: snow url('./../../../images/auth_login.gif') no-repeat center bottom;
+        width:400px;
+        height:200px;
+}
+
+.cactiLogout {
+        background: snow url('./../../../images/auth_logout.gif') no-repeat center bottom;
+        width:400px;
+        height:200px;
+}
+
+.cactiPermissions {
+        background: snow url('./../../../images/auth_deny.gif') no-repeat center bottom;
+        width:400px;
+        height:200px;
+}
+
+.logonPanel td {
+        padding:4px 0px;
+}
+
