--- a/cacti/branches/0.8.8/include/themes/classic/main.css
+++ b/cacti/branches/0.8.8/include/themes/classic/main.css
@@ -185,18 +185,6 @@ ul#breadcrumbs {
 	height:140px;
 }
 
-.cactiLogout {
-	background: snow url('./../../../images/auth_logout.gif') no-repeat center bottom;
-	width:400px;
-	height:200px;
-}
-
-.cactiPermissions {
-	background: snow url('./../../../images/auth_deny.gif') no-repeat center bottom;
-	width:400px;
-	height:200px;
-}
-
 .loginLeft, .logoutLeft {
 	width:33%;
 	float:left;
@@ -207,7 +195,7 @@ ul#breadcrumbs {
 	padding:30px 0px 5px 20px;
 	top:15%;
 	max-width:350px;
-	max-height:300px;
+	max-height:350px;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -236,7 +224,7 @@ ul#breadcrumbs {
 
 .loginErrors, .logoutErrors {
 	color:red;
-	height:15px;
+	min-height:15px;
 }
 
 legend {
@@ -405,11 +393,13 @@ legend {
 	vertical-align:bottom;
 	text-align:left;
 	border-right: 1px groove #efefef;
+	font-size:11px;
 }
 
 .tableHeader th div {
 	display:block;
 	padding-right: 8px;
+	font-size:11px;
 }
 
 .tableSubHeaderColumn {
@@ -888,35 +878,3 @@ div.calendar { position: relative; }
 @media print {
 	.noprint { display:none }
 }
-
-.cactiLogo {
-         padding-top:20px;
-        background: #efefef url('./../../../images/cacti_logo.gif') no-repeat center;
-        display:block;
-        width:90px;
-        cursor:pointer;
-        height:140px;
-}
-
-.cactiLogon {
-        background: snow url('./../../../images/auth_login.gif') no-repeat center bottom;
-        width:400px;
-        height:200px;
-}
-
-.cactiLogout {
-        background: snow url('./../../../images/auth_logout.gif') no-repeat center bottom;
-        width:400px;
-        height:200px;
-}
-
-.cactiPermissions {
-        background: snow url('./../../../images/auth_deny.gif') no-repeat center bottom;
-        width:400px;
-        height:200px;
-}
-
-.logonPanel td {
-        padding:4px 0px;
-}
-
