--- a/cacti/branches/0.8.8/include/themes/modern/main.css
+++ b/cacti/branches/0.8.8/include/themes/modern/main.css
@@ -33,6 +33,49 @@ th .ui-icon {
     top: 50%;
 }
 
+.usermenudown {
+	background: transparent url('./../../../images/bullet_arrow_down.png') no-repeat center right;
+}
+
+.usermenuup {
+	background: transparent url('./../../../images/bullet_arrow_up.png') no-repeat center right;
+}
+
+.user {
+	padding-right:16px;
+	font-weight:bold;
+	cursor:pointer;
+}
+
+.menuoptions {
+	background: none repeat scroll 0 0 #eee;
+    border-color: #f5f5f5 #e5e5e5 #ccc;
+    border-style: solid;
+    border-width: 0px 1px 1px 1px;
+	z-index:2;
+	display:block;
+	float:right;
+	position:absolute;
+	right:26px;
+	top:55px;
+  	list-style: none;
+	text-align:right;
+	margin:0px;
+	padding:0px;
+}
+
+.menuoptions li a {
+	border-top: 1px solid #ccc;
+	font-weight:bold;
+	display:block;
+	height:14px;
+}
+
+.menuoptions li a:hover {
+	display:block;
+	background: linear-gradient(to bottom, rgba(242, 246, 248, 1) 0%, rgba(216, 225, 231, 1) 50%, rgba(181, 198, 208, 1) 51%, rgba(224, 239, 249, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+}
+
 .emailtest {
 	cursor:pointer;
 	display:block;
@@ -162,95 +205,98 @@ ul#breadcrumbs {
 }
 
 .infoBar{
-  background: #eee;
-  border-width: 1px;
-  border-style: solid;
-  padding:0.5px 5px 0.5px 5px;
-  white-space:nowrap;
-  border-color: #f5f5f5 #e5e5e5 #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 2px rgba(0,0,0,.2);
-  overflow: hidden;
-  max-width: 40%;
-  float:right;
+	background: #eee;
+	border-width: 1px;
+	border-style: solid;
+	padding:0.5px 8px 0.5px 5px;
+	white-space: nowrap;
+	border-color: #f5f5f5 #e5e5e5 #ccc;
+	border-radius: 5px;
+	box-shadow: 0 0 2px rgba(0,0,0,.2);
+	overflow: hidden;
+	display: block;
+	min-width: 15%;
+	max-width: 40%;
+	float: right;
+	text-align: right;
 }
 
 #breadcrumbs {
-  background: #eee;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #f5f5f5 #e5e5e5 #ccc;
-  border-radius: 5px;
-  white-space:nowrap;
-  max-width:100%;
-  box-shadow: 0 0 2px rgba(0,0,0,.2);
-  overflow: hidden;
-  max-width: 60%;
-  min-width: 30%;
-  float:left;
+	background: #eee;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #f5f5f5 #e5e5e5 #ccc;
+	border-radius: 5px;
+	white-space:nowrap;
+	max-width:100%;
+	box-shadow: 0 0 2px rgba(0,0,0,.2);
+	overflow: hidden;
+	max-width: 60%;
+	min-width: 30%;
+	float:left;
 }
 
 #breadcrumbs li {
-  float: left;
+	float: left;
 }
 
 #breadcrumbs a {
-  padding: .2em 1em .2em 2em;
-  float: left;
-  text-decoration: none;
-  color: #444;
-  position: relative;
-  font-size:10px;
-  text-shadow: 0 1px 0 rgba(255,255,255,.5);
-  background-color: #ddd;
-  background-image: linear-gradient(to right, #f5f5f5, #ddd);  
+	padding: .2em 1em .2em 2em;
+	float: left;
+	text-decoration: none;
+	color: #444;
+	position: relative;
+	font-size:10px;
+	text-shadow: 0 1px 0 rgba(255,255,255,.5);
+	background-color: #ddd;
+	background-image: linear-gradient(to right, #f5f5f5, #ddd);  
 }
 
 #breadcrumbs li:first-child a {
-  padding-left: 1em;
-  border-radius: 5px 0 0 5px;
+	padding-left: 1em;
+	border-radius: 5px 0 0 5px;
 }
 
 #breadcrumbs a:hover {
-  background: #fff;
+	background: #fff;
 }
 
 #breadcrumbs a::after,
 #breadcrumbs a::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  margin-top: -1.5em;   
-  border-top: 1.5em solid transparent;
-  border-bottom: 1.5em solid transparent;
-  border-left: 1.1em solid;
-  right: -1em;
+	content: "";
+	position: absolute;
+	top: 50%;
+	margin-top: -1.5em;   
+	border-top: 1.5em solid transparent;
+	border-bottom: 1.5em solid transparent;
+	border-left: 1.1em solid;
+	right: -1em;
 }
 
 #breadcrumbs a::after { 
-  z-index: 2;
-  border-left-color: #ddd;  
+	z-index: 2;
+	border-left-color: #ddd;  
 }
 
 #breadcrumbs a::before {
-  border-left-color: #ccc;  
-  right: -1.1em;
-  z-index: 1; 
+	border-left-color: #ccc;  
+	right: -1.1em;
+	z-index: 1; 
 }
 
 #breadcrumbs a:hover::after {
-  border-left-color: #fff;
+	border-left-color: #fff;
 }
 
 #breadcrumbs .current,
 #breadcrumbs .current:hover {
-  font-weight: bold;
-  background: none;
+	font-weight: bold;
+	background: none;
 }
 
 #breadcrumbs .current::after,
 #breadcrumbs .current::before {
-  content: normal;  
+	content: normal;  
 }
 
 .cactiTreeNavigationArea {
@@ -558,16 +604,23 @@ legend {
 	white-space:nowrap;
 }
 
-.navBarNext, .navBarNext:visited, .navBarNext:active, .navBarNext:hover {
+.navBarNavigation {
 	color: white;
 	font-weight: bold;
-	text-decoration: none;
+	display:block;
+	cursor:pointer;
 }
 
-.navBarPrevious, .navBarPrevious:visited, .navBarPrevious:active, .navBarPrevious:hover {
-	color: white;
-	font-weight: bold;
-	text-decoration: none;
+.navBarNavigationNext i.ui-icon {
+	margin-top: -16px;
+	margin-right: -16px;
+	top:50%;
+}
+
+.navBarNavigationPrevious i.ui-icon {
+	margin-bottom: -16px;
+	margin-left: -16px;
+	top:50%;
 }
 
 .textArea {
