1) Correct change password redirect loop. 2) Remove 'legacy_menu_nav' option in settings 3) Add 'placeholder' as a form option 4) Fix undefined variable when logging in using authentication tokens 5) Convert Cacti to use PHPMailer Class 6) Add option to send emails through secure connections SSL/TLS 7) Minor form Cleanup 8) Add SMTP Ping Function for Quick Tests 9) Minor CSS change in Classic mode

--- a/cacti/branches/0.8.8/include/themes/classic/main.css
+++ b/cacti/branches/0.8.8/include/themes/classic/main.css
@@ -78,6 +78,11 @@ tr.selected {
 	background-color: #e1e1e1;
 }
 
+.emailtest {
+	cursor:pointer;
+	display:block;
+}
+
 .odd {
 	background-color:#F5F5F5;
 }
