1) Remove 'Default' everywhere 2) Remove colons at the end of filter names

--- a/cacti/branches/0.8.8/include/themes/classic/main.css
+++ b/cacti/branches/0.8.8/include/themes/classic/main.css
@@ -399,6 +399,16 @@ legend {
 	height:8px;
 }
 
+.next {
+	padding-right:6px;
+	padding-left:6px;
+}
+
+.previous {
+	padding-right:6px;
+	padding-left:6px;
+}
+
 .cactiTableTitle {
 	background-color: #00438c;
 }
