- remove white spaces at the beginning of every description lines while parsing MIB objects. (note: rebuilt the SNMPcache first to see the outcome) - use jQuery UI for tooltips instead of legacy JS code - add a few lines of CSS to make those tool tips looking a little bit nicer.

--- a/cacti/branches/0.8.8/include/themes/classic/main.css
+++ b/cacti/branches/0.8.8/include/themes/classic/main.css
@@ -953,3 +953,21 @@ div.calendar { position: relative; }
 @media print {
 	.noprint { display:none }
 }
+
+.ui-tooltip {
+	max-width: none !important;
+}
+
+.ui-tooltip-content div.header {
+	color: blue;
+}
+
+.ui-tooltip-content div.content {
+	font-size: 10px;
+	color: #333333;
+}
+
+div.preformatted {
+	font-family: monospace;
+	white-space: pre;
+}
